<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <android.support.constraint.Guideline
            android:id="@+id/line1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.27"/>


    <TextView
            android:id="@+id/tv_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="80dp"
            android:text="@string/weight"
            app:layout_constraintLeft_toLeftOf="@id/rv_menu"
            android:textColor="#000000"
            android:textSize="24sp"/>

    <TextView
            android:id="@+id/tv_weight_value"
            android:layout_width="100dp
"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/tv_weight"
            app:layout_constraintLeft_toRightOf="@id/tv_weight"
            app:layout_constraintBottom_toBottomOf="@+id/tv_weight"
            android:layout_marginStart="10dp"
            android:text="@string/weight_value"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="32sp"/>

    <TextView
            android:id="@+id/tv_weight_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/tv_weight"
            app:layout_constraintLeft_toRightOf="@id/tv_weight_value"
            app:layout_constraintBottom_toBottomOf="@+id/tv_weight"
            android:layout_marginStart="4dp"
            android:text="@string/weight_unit"
            android:textColor="#000000"
            android:textSize="24sp"/>

    <android.support.constraint.Guideline
            android:id="@+id/lin2"
            android:layout_width="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.73"
            android:layout_height="0dp"/>

    <TextView
            android:id="@+id/tv_weight_steady"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            app:layout_constraintLeft_toRightOf="@+id/tv_weight_unit"
            android:text="@string/steady"
            app:layout_constraintTop_toTopOf="@+id/tv_weight"
            app:layout_constraintBottom_toBottomOf="@+id/tv_weight"
            android:textColor="#000000"
            android:textSize="24sp"/>

    <android.support.constraint.Guideline
            android:id="@+id/line4"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"
            android:layout_width="0dp"
            android:layout_height="0dp"/>

    <Button
            android:id="@+id/btn_zero"
            android:layout_width="100dp"
            app:layout_constraintLeft_toLeftOf="@+id/line4"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_weight_value"
            android:layout_marginTop="70dp"
            android:text="@string/zero_seting"
            android:textColor="#000000"
            android:textSize="22sp"/>

    <Button
            android:id="@+id/btn_peel"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_below="@+id/tv_weight"
            app:layout_constraintTop_toTopOf="@+id/btn_zero"
            app:layout_constraintLeft_toRightOf="@+id/btn_zero"
            android:layout_marginStart="100dp"
            android:layout_toEndOf="@+id/btn_zero"
            android:text="@string/qupi"
            android:textColor="#000000"
            android:textSize="22sp"/>

    <EditText
            android:id="@+id/et_peel_weight"
            app:layout_constraintLeft_toLeftOf="@+id/btn_manual_peel"
            app:layout_constraintBottom_toTopOf="@+id/btn_manual_peel"
            android:inputType="number"
            android:background="@drawable/bg_border"
            android:layout_width="0dp"
            android:hint="输入去皮值"
            app:layout_constraintRight_toRightOf="@+id/btn_manual_peel"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/btn_manual_peel"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:padding="10dp"
            android:layout_below="@+id/tv_weight"
            app:layout_constraintTop_toTopOf="@+id/btn_zero"
            app:layout_constraintLeft_toRightOf="@+id/btn_peel"
            android:layout_marginStart="50dp"
            android:layout_toEndOf="@+id/btn_zero"
            android:onClick="onClick"
            android:text="手动去皮"
            android:textColor="#000000"
            android:textSize="22sp"/>


    <!--<Spinner-->
    <!--android:id="@+id/select_serial_port"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="50dp"-->
    <!--android:layout_below="@+id/tv_weight"-->
    <!--android:layout_marginStart="100dp"-->
    <!--android:layout_marginTop="50dp"-->
    <!--android:layout_toEndOf="@+id/btn_peel"-->
    <!--android:text="@string/serial_port"-->
    <!--android:textColor="#000000"-->
    <!--android:textSize="22sp"/>-->

    <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            app:layout_constraintRight_toLeftOf="@+id/btn_zero"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/btn_zero"
            android:layout_marginRight="40dp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_zero"
            android:textColor="@android:color/black"
            android:textSize="26sp"/>

    <!--<TextView-->
    <!--android:id="@+id/tv_auto_print"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignTop="@+id/sw_auto_print"-->
    <!--android:layout_alignBottom="@+id/sw_auto_print"-->
    <!--android:layout_toStartOf="@+id/sw_auto_print"-->
    <!--android:text="@string/is_automatic_print"-->
    <!--android:textColor="@android:color/black"-->
    <!--android:textSize="22sp"/>-->

    <!--<Switch-->
    <!--android:id="@+id/sw_auto_print"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_below="@+id/tv_weight"-->
    <!--android:layout_alignParentEnd="true"-->
    <!--android:layout_marginStart="10dp"-->
    <!--android:layout_marginTop="50dp"-->
    <!--android:layout_marginEnd="100dp"-->
    <!--android:textOff="@string/off"-->
    <!--android:textOn="@string/on"-->
    <!--android:thumb="@drawable/thumb"-->
    <!--android:track="@drawable/track"/>-->

    <android.support.constraint.Guideline
            android:id="@+id/line3"
            android:layout_width="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.19"
            android:layout_height="0dp"/>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_menu"
            android:layout_width="600dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_zero"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="0dp"
            android:paddingTop="20dp"
            android:overScrollMode="never">
    </android.support.v7.widget.RecyclerView>

</android.support.constraint.ConstraintLayout>